[package]
authors = ["Bryant Luk <code@bryantluk.com>"]
categories = ["encoding", "no-std"]
description = "A Little Snitch .lsrules file format model"
documentation = "https://docs.rs/ls_rules/"
edition = "2021"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "CHANGELOG.md",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]
keywords = ["lsrules", "json", "serialization", "serde"]
license = "MIT OR Apache-2.0"
name = "ls_rules"
readme = "README.md"
repository = "https://github.com/bluk/ls_rules"
rust-version = "1.56.0"
version = "0.4.0"

[dependencies]
serde = { version = "1", default-features = false }
serde_derive = { version = "1" }

[dev-dependencies]
serde_json = "1"

[features]
default = ["std"]

std = ["serde/std"]

alloc = ["serde/alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
